--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EjemploJS</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <h1 id="titulo">Ejemplo de una pagina con JS</h1>
+    <h1 id="titulo">Este es un titulo</h1>
+
+    <p id="parrafo">Este es un parrafo con un <a href="#">Link</a></p>
+    <ol>
+        <li>primero</li>
+        <li>segundo</li>
+    </ol>
+    <a>Tengo un link a contacto</a>
+
+    <h2 id="subtitulo" style="color: aqua;">Esto es un subtítulo</h2>
+
+    <div id="contenedor"></div>
+
+    <div id="contenedor-lista"></div>
 
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/dom.js"></script>    
 </body>
 </html>
