--- a/lista-productos.html
+++ b/lista-productos.html
@@ -39,6 +39,37 @@
 
     <main id="principal"></main>
 
+    <!--
+        <button class="btn btn-warning " onclick="alert('Hola, hiciste click')">Soy un boton</button>
+        <button class="btn btn-warning " onclick="saludar()">Soy otro boton</button>
+        <button class="btn btn-danger " onclick="recargar()">Cargar tabla</button>
+
+        <div class="py-3">
+            <button id="btn-agregar">Agregar</button>
+        
+        </div>
+    -->
+    <button class="btn btn-danger mb-3 " onclick="recargar()">Cargar tabla</button>
+
+    <section>
+        <form action="" id="formulario">
+            <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre:</label>
+                <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre">
+            </div>
+            <div class="mb-3">
+                <label for="precio" class="form-label">Precio:</label>
+                <input type="text" class="form-control" name="precio" id="precio" placeholder="Ingrese precio">
+            </div>
+
+            <div class="d-grid">
+                <button type="submit" id="btn-agregar btn btn-primary">Agregar</button>
+
+            </div>
+        </form>
+
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="assets/js/tablaDinamica.js"></script>
 </body>
